force-app/main/default/objects/Enquiry__c/Enquiry__c.object-meta.xml
<CustomObject>
    <description>Stores sponsor enquiries (per sponsor user)</description>
    <label>Enquiry</label>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>ENQ-{00000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>