force-app/main/default/objects/Enquiry__c/fields/Interested_HS__c.field-meta.xml
<CustomField>
    <fullName>Interested_HS__c</fullName>
    <description>Interested health systems (placeholder)</description>
    <label>Interested HS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>