force-app/main/default/objects/Enquiry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Project / product name</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>