force-app/main/default/objects/Enquiry__c/fields/Req_Specialities__c.field-meta.xml
<CustomField>
    <fullName>Req_Specialities__c</fullName>
    <description>Required specialities (comma-separated)</description>
    <label>Req. Specialities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>