force-app/main/default/objects/Enquiry__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <description>Lookup to Sponsor</description>
    <label>Sponsor</label>
    <referenceTo>Sponsor__c</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>